streamsync: unblock gcond on flush-stop

See https://bugzilla.gnome.org/show_bug.cgi?id=680441